--- a/index.html
+++ b/index.html
@@ -9,7 +9,146 @@
     <title>Send Money, Pay Online or Set Up a Merchant Account</title>
 </head>
 <body>
-    
+    <!-- Front Page -->
+    <div class="container">
+        <!-- Front Page -->
+        <div class="front-page">
+             <!-- Section 1-->
+            <div class="section-1">
+                <!-- Navbar Wrapper-->
+                <div class="navbar-wrapper">
+                    <!-- Navbar -->
+                    <nav class="navbar">
+                        <!-- Navbar Logo -->
+                        <div class="navbar-logo">
+                            <span class="p-1">P</span>
+                            <span class="p-2">P</span>
+                            PayPal
+                        </div>
+                        <!-- End Navbar Logo -->
+                        <!-- Nav List -->
+                        <ul class="nav-list">
+                            <!-- Nav List Item -->
+                            <li class="nav-list-item dropdown-hover">
+                                <a href="#" class="nav-list-link">Personal
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                                <!-- Nav Dropdown -->
+                                <ul class="nav-dropdown">
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link nav-dropdown-link-1">How Paypal Works</a>
+                                        <a href="" class="nav-dropdown-link">What can you do with a personal account</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link nav-dropdown-link-1">Pay Online</a>
+                                        <a href="" class="nav-dropdown-link">Online payment without borders</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link nav-dropdown-link-1">Send payments</a>
+                                        <a href="" class="nav-dropdown-link">Send payments abroad</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link nav-dropdown-link-1">Search for deals</a>
+                                        <a href="" class="nav-dropdown-link">Pay with PayPal and send money</a>
+                                    </li>
+                                </ul>
+                                <!-- End Nav Dropdown -->
+                            </li>
+                            <!-- End Nav List Item -->
+                            <!-- Nav List Item -->
+                            <li class="nav-list-item dropdown-hover">
+                                <a href="#" class="nav-list-link">Business
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                                <!-- Nav Dropdown -->
+                                <ul class="nav-dropdown">
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link-1">All business</a>
+                                        <a href="" class="nav-dropdown-link">See or range of products</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link-1">Accept online payments</a>
+                                        <a href="" class="nav-dropdown-link">Get paid on your website</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link-1">Send invoices</a>
+                                        <a href="" class="nav-dropdown-link">Create and email online invoices</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link-1">Sell internationally</a>
+                                        <a href="" class="nav-dropdown-link">Supports your global growth</a>
+                                    </li>
+                                </ul>
+                                <!-- End Nav Dropdown -->
+                            </li>
+                            <!-- End Nav List Item -->
+                            <!-- Nav List Item -->
+                            <li class="nav-list-item">
+                                <a href="#" class="nav-list-link">Partners and Developers
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                                <!-- Nav Dropdown -->
+                                <ul class="nav-dropdown nav-dropdown-2">
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link-1">How Paypal Works</a>
+                                        <a href="" class="nav-dropdown-link-2">What can you do with a personal account</a>
+                                        <a href="" class="nav-dropdown-link-1">How Paypal Works</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link-1">Pay Online</a>
+                                        <a href="" class="nav-dropdown-link-2">Online payment without borders</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link-1">Send payments</a>
+                                        <a href="" class="nav-dropdown-link-2">Send payments abroad</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="" class="nav-dropdown-link-1">Search for deals</a>
+                                        <a href="" class="nav-dropdown-link-2">Pay with PayPal and send money</a>
+                                    </li>
+                                </ul>
+                                <!-- End Nav Dropdown -->
+                            </li>
+                            <!-- End Nav List Item -->
+                        </ul>
+                        <!-- End Nav List -->
+                        <!-- Navbar button -->
+                        <div class="navbar-buttons">
+                            <button class="navbar-btn login-btn">
+                                Login
+                            </button>
+                            <button class="navbar-btn signup-btn">
+                                Signup
+                            </button>
+                        </div>
+                        <!-- End Navbar button -->
+                    </nav>
+                    <!-- End Navbar -->
+                </div>
+                <!-- End Navbar Wrapper-->
+                <!-- Banner -->
+                <div class="banner">
+                    <h1 class="banner-headling">
+                        We've Got You Covered
+                    </h1>
+                    <p class="banner-paragraph">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    </p>
+                    <button class="blue-btn">Learn More</button>
+                </div>
+                <!-- End Banner -->
+            </div>
+            <!-- End of section 1 -->
+
+            <!-- Section 2 -->
+            <div class="section-2">
+
+            </div>
+            <!-- End Section 2 -->
+        </div>
+        <!-- End Front Page -->
+    </div>    
+    <!-- End of Fron Page -->
 
 
     <script src="script.js"></script>
