--- a/index.html
+++ b/index.html
@@ -142,15 +142,176 @@
 
             <!-- Section 2 -->
             <div class="section-2">
-
+                <h1 class="section-2-handing">PayPal is for everyone who pays or gets paid</h1>
+                <div class="services">
+                    <div class="service">
+                        <i class="fas fa-user-tie"></i>
+                        <h3 class="service-heading">
+                            Individuals
+                        </h3>
+                        <p class="service-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <button class="service-btn">Learn More</button>
+                    </div>
+                    <div class="service">
+                        <i class="fas fa-briefcase"></i>
+                        <h3 class="service-heading">
+                            Business
+                        </h3>
+                        <p class="service-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <button class="service-btn">Learn More</button>
+                    </div>
+                    <div class="service">
+                        <i class="fas fa-handshake"></i>
+                        <h3 class="service-heading">
+                            Partners
+                        </h3>
+                        <p class="service-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <button class="service-btn">Learn More</button>
+                    </div>
+                </div>
             </div>
             <!-- End Section 2 -->
+
+            <!-- Section 3-->
+            <div class="section-3">
+                <h1 class="section-3-heading">
+                    The world prefers PayPal
+                </h1>
+                <div class="features">
+                    <div class="feature">
+                        <h3 class="feature-heading">
+                            Advanced Protection
+                        </h3>
+                        <p class="feature-paragraph">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="feature">
+                        <h3 class="feature-heading">
+                            Fast Payments
+                        </h3>
+                        <p class="feature-paragraph">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="feature">
+                        <h3 class="feature-heading">
+                            Global Reach
+                        </h3>
+                        <p class="feature-paragraph">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="feature">
+                        <h3 class="feature-heading">
+                            Easy Integration
+                        </h3>
+                        <p class="feature-paragraph">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="feature">
+                        <h3 class="feature-heading">
+                            Simple and Convenient
+                        </h3>
+                        <p class="feature-paragraph">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="feature">
+                        <h3 class="feature-heading">
+                            24/7 Service
+                        </h3>
+                        <p class="feature-paragraph">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- End Section 3 -->
+
+            <!-- Section 4 -->
+            <div class="section-4">
+                <h1 class="section-4-heading">
+                    Get started with PayPal
+                </h1>
+                <div class="section-4-content">
+                    <div class="section-4-img-wrapper">
+                        <img src="images/macbook.png" alt="macbook">
+                    </div>
+                    <ul class="section-4-list">
+                        <li class="section-4-list-item">
+                            <span class="number">1</span>
+                            <span>Set up <a href="#">a business account</a></span>
+                        </li>
+                        <li class="section-4-list-item">
+                            <span class="number">2</span>
+                            <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+                        </li>
+                        <li class="section-4-list-item">
+                            <span class="number">2</span>
+                            <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End Section 4 -->
+
+            <!-- Section 5 -->
+            <div class="section-5">
+                <div class="section-5-top">
+                    <h2 class="section-5-top-heading">
+                        Sign Up and Get Started
+                    </h2>
+                    <button class="blue-btn">Get Started</button>
+                </div>
+                <footer class="footer">
+                    <div class="footer-top">
+                        <ul class="footer-list">
+                            <li>
+                                <a href="#">Help and Contact</a>
+                            </li>
+                            <li>
+                                <a href="#">Fees</a>
+                            </li>
+                            <li>
+                                <a href="#">Security</a>
+                            </li>
+                            <li>
+                                <a href="#">Features</a>
+                            </li>
+                            <li>
+                                <a href="#">Shop</a>
+                            </li>
+                        </ul>
+                        <ul class="footer-list">
+                            <li>
+                                <a href="#">English</a>
+                            </li>
+                            <li>
+                                <a href="#">Spanish</a>
+                            </li>
+                            <li>
+                                <a href="#">French</a>
+                            </li>
+                            <li>
+                                <a href="#">Italian</a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="images/flag.png" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-bottom">
+                        <p class="copyright">Copyright &copy; All Rights Reserved</p>
+                    </div>
+                </footer>
+            </div>
+            <!-- End Section 5 -->
         </div>
         <!-- End Front Page -->
     </div>    
     <!-- End of Fron Page -->
-
-
     <script src="script.js"></script>
 </body>
 </html>
